@@ -8,7 +8,7 @@ public class App {
 		
 		Query query = new Query();
 		try {
-			query.getAllData().getFirst();
+			query.getAllData().get(0);
 		} catch (SQLException e) {
 			// TODO Auto-generated catch block
 			e.printStackTrace();
